Changes for Pythin files in Makefile.

--- a/programs/Makefile
+++ b/programs/Makefile
@@ -1,18 +1,17 @@
 # gzipped tar file dependencies
-xiongSupplement.tgz: R/fr.R R/logistic.R \
+xiongSupplement.tgz: R/fr.R R/logistic.R R/steps1.R py/*.{py,pyx} py/Makefile\
 	data/N1_GenoTypes.csv data/N1_CTvsProb_BW6min.csv
-# make directory
-	mkdir xiongSupplement
-# make subdirectories
-	mkdir xiongSupplement/R
+	# create directories
+	mkdir -p xiongSupplement/R
 	mkdir xiongSupplement/py
 	mkdir xiongSupplement/data
 # copy files into the respective directories
 	cp R/fr.R R/logistic.R xiongSupplement/R
 	cp data/N1_GenoTypes.csv xiongSupplement/data
 	cp data/N1_CTvsProb_BW6min.csv xiongSupplement/data
+	cp py/*.{py,pyx} py/Makefile xiongSupplement/py
 # tarzip it
-	tar zcf xiongSupplement.tgz xiongSupplement
+	tar -zcf xiongSupplement.tgz xiongSupplement
 
 clean:
-	rm -r xiongSupplement
+	rm -rf xiongSupplement
